css/pricing.css
p {
    text-align: right;
    padding-right: 15%;
    padding-bottom: 14px;
}

button {
    display: none;
    background-color: rgb(247, 197, 106);
    border-radius: 8px;
    padding: 3px;
    margin-right: 20px;
    margin-left: 20px;
}

.price {
    font-size: 50px;
}

.pricing-card {
    display: flex;
    flex-direction: column;
    margin: auto; 
    margin-bottom: 10px;
    width: 70%;
    padding: 25px 10px;
    text-align: center;
    background-image: linear-gradient(rgb(158, 158, 158),white);
    border-radius: 12px;
}

.pricing-card:hover {
    border: 5px solid orange;
    transform: scale(1.2);
}

.pricing-card:hover button {
    display: inline-block;
}

.pricing-card:hover .dollar {
    color:rgb(243, 173, 43)
}

@media (min-width: 600px) {
    p {
        padding-right: 0;
    }
    button {
        margin-left: 0;
        margin-right: 0;
    }
    .prices {
        margin-top: 10%;
        display: flex;
        justify-content: center;
    }
    .pricing-card {
        width: 33vh;
        margin: 20px;
        padding: 10px;
        padding-top: 40px;
        padding-bottom: 40px;
    }
}

